<resources>
    <string name="app_name">鱼水</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="reload">重新加载</string>
    <string name="no_network">没有网络,检查下网络吧！</string>
    <string name="network_error_retry">网络异常,点击重试</string>
    <string name="data_error">数据异常</string>
    <string name="delete">删除</string>
    <string name="deletting">删除中...</string>
    <string name="finish">完成</string>
    <string name="yesterday">昨天</string>
    <string name="loading">加载中...</string>
    <string name="loading_failed">囧 加载失败</string>
    <string name="no_data">暂时没有数据</string>
    <string name="save">保存</string>
    <string name="save_success">保存成功</string>
    <string name="save_failed">保存失败</string>
    <string name="time_5min">5分钟</string>
    <string name="time_10min">10分钟</string>
    <string name="time_15min">15分钟</string>
    <string name="time_20min">20分钟</string>
    <string name="time_30min">30分钟</string>
    <string name="time_1hour">1小时</string>
    <string name="time_2hour">2小时</string>
    <string name="exit_application_alert">再按一次退出</string>
    <string name="share_title">分享</string>
    <string name="share_default_title">她他社分享</string>
    <string name="share_platform_qq">QQ</string>
    <string name="share_platform_qzone">QQ空间</string>
    <string name="share_platform_wechat_friends">微信朋友</string>
    <string name="share_platform_wechat_timeline">微信朋友圈</string>
    <string name="share_platform_weibo">新浪微博</string>
    <string name="share_platform_more">更多</string>
    <string name="share_app_verion_low">该应用版本过低，请更新新版本</string>
    <string name="share_app_not_installed">您未安装该应用哦!!</string>
    <string name="share_error">分享失败</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="cube_views_load_more_loading">加载中...</string>
    <string name="cube_views_load_more_click_to_load_more">点击加载更多</string>
    <string name="cube_views_load_more_loaded_no_more">已加载全部数据</string>
    <string name="cube_views_load_more_loaded_empty">没有数据了</string>
    <string name="cube_views_load_more_error">加载失败，点击重试</string>
    <string name="cube_views_load_more">上拉加载更多</string>
    <string name="photo_picker_title">选择相片</string>
    <string name="photo_picker_finish">完成</string>
    <string name="photo_picker_loading">加载中...</string>
    <string name="photo_picker_no_photos">没有相片</string>
    <string name="photo_picker_max_limit">最多只能选择#photo_num#张图片</string>
    <string name="photo_pick_panel_from_gallery">从手机相册选择</string>
    <string name="photo_pick_panel_from_camera">相机</string>
    <string name="photo_save">保存到相册</string>
    <string name="photo_saving">保存中...</string>
    <string name="home_tab_homepage">首页</string>
    <string name="home_tab_community">社区</string>
    <string name="home_tab_shopping">商城</string>
    <string name="home_tab_account">我</string>
    <string name="home_entrance_record">啪啪记录</string>
    <string name="home_entrance_peep">偷窥一下</string>
    <string name="home_entrance_qa">TA咨询</string>
    <string name="home_entrance_test">测一测</string>
    <string name="home_entrance_knowledge">涨姿势</string>
    <string name="homepage_title">首页</string>
    <string name="homepage_sex_record">记录</string>
    <string name="homepage_sex_index">情趣成就</string>
    <string name="homepage_rise_posture">记录</string>
    <string name="homepage_loading">加载中...</string>
    <string name="homepage_network_error">网络异常</string>
    <string name="homepage_network_error_retry">网络异常,点击重试</string>
    <string name="homepage_data_error">数据异常</string>
    <string name="homepage_data_empty">囧 空空如也</string>
    <string name="homepage_item_btn_text_test">开始测试</string>
    <string name="homepage_item_btn_text_article">开始阅读</string>
    <string name="homepage_item_title_prefix">by</string>
    <string name="homepage_detail_more_article_text">去看看更多</string>
    <string name="homepage_detail_more_product">去看看更多优品</string>
    <string name="homepage_detail_more_test">去看看更多测试</string>
    <string name="homepage_feed_list_article">文章</string>
    <string name="homepage_feed_list_test">测试</string>
    <string name="homepage_feed_list_product">优品</string>
    <string name="homepage_test_title">每日一测</string>
    <string name="homepage_pic_num_postfix">photos</string>
    <string name="homepage_date_today">今日啪点</string>
    <string name="homepage_detail_comments_num">共#num#条评论</string>
    <string name="homepage_detail_more_comments">查看更多评论</string>
    <string name="homepage_detail_more_article">更多性感内容</string>
    <string name="homepage_detail_more_article_title">I WANT MORE</string>
    <string name="homepage_detail_recommend_view_num">#num#人浏览</string>
    <string name="knowledge_title">涨姿势</string>
    <string name="knowledge_men">男生篇</string>
    <string name="knowledge_women">女生篇</string>
    <string name="knowledge_men_women">男女篇</string>
    <string name="knowledge_share_title">不得不看的男人女人两性姿势</string>
    <string name="knowledge_share_content">她他社独家权威两性姿势，全面解锁</string>
    <string name="knowledge_next">下一个姿势</string>
    <string name="knowledge_pre">上一个姿势</string>
    <string name="record_title">啪啪记录</string>
    <string name="record_datetime_view_time_next">Next</string>
    <string name="record_datetime_view_time_prev">Previous</string>
    <string name="record_btn_papa">啪啪</string>
    <string name="record_btn_myself">自嗨</string>
    <string name="record_btn_nothing">没做</string>
    <string name="record_btn_ok">好啦</string>
    <string name="record_title_papa_when">啪啪时间？</string>
    <string name="record_title_myself_when">自嗨时间？</string>
    <string name="record_title_feel">感觉如何？</string>
    <string name="record_title_heat">高潮了吗？</string>
    <string name="record_title_liven">助兴</string>
    <string name="record_title_tools">玩具</string>
    <string name="record_title_scene">场景</string>
    <string name="record_title_time">时长</string>
    <string name="record_title_posture">体位</string>
    <string name="record_title_dym">大姨妈</string>
    <string name="record_window_bottom_title">进入贤者模式，进来签个到</string>
    <string name="record_list_items_title">今日进入贤者模式</string>
    <string name="record_list_items_normal_title">坚持记录能够帮助你记录健康状况\n还有贴心小功能哦！</string>
    <string name="record_msg_liven">助兴为必选</string>
    <string name="record_msg_tools">玩具为必选</string>
    <string name="record_msg_scene">场景为必选</string>
    <string name="record_msg_time">时长为必选</string>
    <string name="record_msg_posture">体位为必选</string>
    <string name="record_msg_feel">感受为必选</string>
    <string name="record_msg_date">时间为必选</string>
    <string name="record_msg_error1">今日已经啪过了，无法进入贤者模式哟</string>
    <string name="record_msg_error2">没有时光机不可以修改过去哦~</string>
    <string name="record_msg_error3">没有时光机不可以修改未来哦~</string>
    <string name="record_msg_time_ange1">早上</string>
    <string name="record_msg_time_ange2">下午</string>
    <string name="record_msg_time_ange3">晚上</string>
    <string name="record_self_title_papa">/啪啪记录/</string>
    <string name="record_self_title_zh">/自嗨记录/</string>
    <string name="record_self_title_no_do">/没做记录/</string>
    <string name="record_self_count_papa">啪啪共计</string>
    <string name="record_self_count_zh">自嗨共计</string>
    <string name="record_self_count_no_do">没做共计</string>
    <string name="record_state_papa">啪啪了</string>
    <string name="record_state_myself">自嗨了</string>
    <string name="record_title_papa">%1$s\u0020\u0020\u0020\u0020啪啪记录</string>
    <string name="record_title_myself">%1$s\u0020\u0020\u0020\u0020自嗨记录</string>
    <string name="record_title_date">%1$s月%2$s日</string>
    <string name="record_commit_msg">提交数据中</string>
    <string name="record_load_msg">加载数据中</string>
    <string name="record_request_success">提交成功</string>
    <string name="record_request_error">提交失败</string>
    <string name="record_request_exception">网络异常，请稍后再试</string>
    <string name="record_future_record_error">"没有时光机不可以预知未来哦~"</string>
    <string name="record_data_share">发给某人</string>
    <string name="record_data_share_discuss">找人讨论</string>
    <string name="record_data_share_content">数据来自她他社#count#份用户样本</string>
    <string name="record_self_title">我的记录</string>
    <string name="record_self_where_papa_title">在哪里啪啪啪？</string>
    <string name="record_self_where_papa_home">家里</string>
    <string name="record_self_where_papa_hotel">酒店</string>
    <string name="record_self_where_papa_car">车里</string>
    <string name="record_self_where_papa_outdoors">户外</string>
    <string name="record_self_bottom_text">么么哒ヽ•´з`•ノ</string>
    <string name="record_self_papa_feel">啪啪感觉如何?</string>
    <string name="record_self_papa_heat">啪啪高潮情况?</string>
    <string name="record_self_papa_time">啪啪时间分布?</string>
    <string name="record_self_papa_post">啪啪哪种姿势?</string>
    <string name="record_self_papa_where">在哪里啪啪啪?</string>
    <string name="record_self_papa_tool">啪啪有用玩具吗?</string>
    <string name="record_self_papa_tool_av">AV</string>
    <string name="record_self_papa_tool_music">声音</string>
    <string name="record_self_papa_tool_book">小说</string>
    <string name="record_self_papa_tool_image">图片</string>
    <string name="record_self_papa_toy_plane">飞机杯</string>
    <string name="record_self_papa_toy_runhuaji">润滑剂</string>
    <string name="record_self_papa_toy_bady">娃娃</string>
    <string name="record_self_papa_toy_other">其他</string>
    <string name="record_self_papa_toy_bang">振动棒</string>
    <string name="record_self_papa_toy_dan">跳蛋</string>
    <string name="record_self_one_papa_feel">自嗨感觉如何?</string>
    <string name="record_self_one_papa_heat">自嗨高潮情况?</string>
    <string name="record_self_one_papa_place">在哪里自嗨?</string>
    <string name="record_self_one_papa_time">自嗨时间分布?</string>
    <string name="record_self_one_papa_toy">自嗨用什么玩具?</string>
    <string name="record_self_one_papa_tool">自嗨用什么助性?</string>
    <string name="record_self_papa_sample_text">数据来自你的#count#次#type#记录</string>
    <string name="record_peep_sex_boy">汉纸</string>
    <string name="record_peep_sex_girl">姑娘</string>
    <string name="record_peep_title">偷窥一下</string>
    <string name="record_peep_sex_man">男</string>
    <string name="record_peep_sex_woman">女</string>
    <string name="record_peep_sex_all">全部</string>
    <string name="record_peep_marriage_single">单身</string>
    <string name="record_peep_marriage_marriaged">已婚</string>
    <string name="record_peep_marriage_inlove">恋爱</string>
    <string name="record_peep_time_yesterday">昨天</string>
    <string name="record_peep_time_last_week">上周</string>
    <string name="record_peep_time_last_month">上月</string>
    <string name="record_peep_show_me">显示我</string>
    <string name="record_peep_more_papa">偷窥啪啪</string>
    <string name="record_peep_one_papa">偷窥自嗨</string>
    <string name="record_peep_no_papa">偷窥没做</string>
    <string name="record_peep_papa_feel">#time#啪啪的#sex#感觉如何</string>
    <string name="record_peep_papa_orgasm">#time#多少#sex#啪啪的时候有高潮</string>
    <string name="record_peep_papa_position">#time##sex#啪了哪种姿势？</string>
    <string name="record_peep_papa_place">#time##sex#在哪里啪啪啪？</string>
    <string name="record_peep_papa_toy">#time#多少#sex#啪啪的时候用了玩具？</string>
    <string name="record_peep_papa_time">#time##sex#啪了多久？</string>
    <string name="community_user_info_post_title">动态</string>
    <string name="community_user_info_article_title">文章</string>
    <string name="community_user_info_fans_title">粉丝</string>
    <string name="community_user_info_following_title">关注</string>
    <string name="account_attention">关注</string>
    <string name="account_fans">粉丝</string>
    <string name="account_collect">收藏</string>
    <string name="account_all_indent">全部订单</string>
    <string name="account_presentation">我的发言</string>
    <string name="account_message">消息</string>
    <string name="account_user_feedback">用户反馈</string>
    <string name="account_updating_version">版本更新</string>
    <string name="account_protection_privacy">隐私保护</string>
</resources>